--- a/index.html
+++ b/index.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Вывод изображения на экран в реальном времени</title>
-
-  <content-security-policy>
-
-    default-src 'self';
-
-
-    script-src 'self';
-  </content-security-policy>
+    <title>Веб-камера и Canvas</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
-<body>
-  <video id="video" width="640" height="480"></video>
+<body><style>
+    #canvas-left {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 50%;
+        height: 100%;
+    }
+    #canvas-right {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        width: 50%;
+        height: 100%;
+    }
+    </style>
+    <div id="canvas-container">
+        <canvas id="canvas-left"></canvas>
+        <canvas id="canvas-right"></canvas>
+    </div>
+    <script>
+        const canvasLeft = document.getElementById('canvas-left');
+        const canvasRight = document.getElementById('canvas-right');
+        const contextLeft = canvasLeft.getContext('2d');
+        const contextRight = canvasRight.getContext('2d');
 
-  <script>
-    // Запрашиваем доступ к камере у пользователя.
-    navigator.mediaDevices.getUserMedia({video: true, audio: false})
-      .then((stream) => {
-        // Получаем поток видео с камеры.
-        const video = document.querySelector("#video");
-        video.srcObject = stream;
+        const video = document.createElement('video');
+        video.autoplay = true;
 
-        // Отображаем видео с камеры на экране.
-        video.play();
-      })
-      .catch((error) => {
-        // Обрабатываем ошибку.
-      });
-  </script>
+        navigator.mediaDevices.getUserMedia({ video: true })
+            .then(function (stream) {
+                video.srcObject = stream;
+            })
+            .catch(function (error) {
+                console.error('Ошибка при доступе к веб-камере: ' + error);
+            });
+
+     
+         
+        video.onloadedmetadata = function (e) {
+            canvasLeft.width = video.videoWidth;
+            canvasLeft.height = video.videoHeight;
+            canvasLeft.width = video.videoWidth;
+            canvasLeft.height = video.videoHeight;
+            drawFrames();
+        };
+
+        function drawFrames() {
+            contextLeft.drawImage(video, 0, 0, canvasLeft.width, canvasLeft.height);
+            contextRight.drawImage(video, 0, 0, canvasRight.width, canvasRight.height);
+            requestAnimationFrame(drawFrames);
+        }
+    </script>
 </body>
 </html>
