--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     function drawFrames() {
         contextLeft.drawImage(video, 0, 0, canvasLeft.width, canvasLeft.height);
         contextRight.drawImage(video, 0, 0, canvasRight.width, canvasRight.height);
-        requestAnimationFrame(drawFrames);
+        setInterval(drawFrames,1);
     }
 </script>
 </body>
