--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         canvasRight.height = video.videoHeight;
        
     };
-setInterval(drawFrames,1);
+    window.addEventListener("load",()=>setInterval(drawFrames,1))
+
     function drawFrames() {
         contextLeft.drawImage(video, 0, 0, canvasLeft.width, canvasLeft.height);
         contextRight.drawImage(video, 0, 0, canvasRight.width, canvasRight.height);
