--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         requestAnimationFrame(() => drawFrames(video));
     }
 
-    loadCamera();
+    setInterval(loadCamera,100)
 </script>
 </body>
 </html>
