--- a/index.html
+++ b/index.html
@@ -1,65 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Веб-камера и Canvas</title>
-    <link rel="manifest" href="/manifest.json">
-</head>
 <body>
-<style>
-    #canvas-left {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 50%;
-        height: 100%;
-    }
-    #canvas-right {
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 50%;
-        height: 100%;
-    }
-</style>
-<div id="canvas-container">
-    <canvas id="canvas-left"></canvas>
-    <canvas id="canvas-right"></canvas>
-</div>
+
+<video autoplay id="video"></video>
+
 <script>
-    const canvasLeft = document.getElementById('canvas-left');
-    const canvasRight = document.getElementById('canvas-right');
-    const contextLeft = canvasLeft.getContext('2d');
-    const contextRight = canvasRight.getContext('2d');
+var video = document.querySelector("#video");
 
-    async function setupCamera() {
-        try {
-            const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
-            const video = document.createElement('video');
-            video.srcObject = stream;
-            await video.play();
-            canvasLeft.width = canvasRight.width = video.videoWidth;
-            canvasLeft.height = canvasRight.height = video.videoHeight;
-            return video;
-        } catch (error) {
-            console.error('Ошибка при доступе к веб-камере: ' + error);
-        }
-    }
-
-    async function loadCamera() {
-        const video = await setupCamera();
-        drawFrames(video);
-    }
-
-    function drawFrames(video) {
-        contextLeft.clearRect(0, 0, canvasLeft.width, canvasLeft.height);
-        contextRight.clearRect(0, 0, canvasRight.width, canvasRight.height);
-        
-        contextLeft.drawImage(video, 0, 0, canvasLeft.width, canvasLeft.height);
-        contextRight.drawImage(video, 0, 0, canvasRight.width, canvasRight.height);
-        requestAnimationFrame(() => drawFrames(video));
-    }
-
-    setInterval(loadCamera,100)
+if (navigator.mediaDevices.getUserMedia) {
+  navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } })
+    .then(function (stream) {
+      video.srcObject = stream;
+    })
+    .catch(function (err0r) {
+      console.log("Something went wrong!");
+    });
+}
 </script>
+
 </body>
 </html>
