--- a/index.html
+++ b/index.html
@@ -30,22 +30,10 @@ body {
 }
 #time {
   position: fixed;
-  top: 10%;
-  left: 5%;
-  width: 100px;
-  height: 40px;
-  color: black;
-  text-align: center;
-  z-index: 2;
-  background-color: rgb(192, 192, 192);
-  border-radius: 20px;
-}
-
-#bat {
-  position: fixed;
-    top: 10%;
-    left: 20%;
-    width: 80px;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100px;
     height: 40px;
     color: black;
     text-align: center;
@@ -53,6 +41,7 @@ body {
     background-color: rgb(192, 192, 192);
     border-radius: 20px;
 }
+
 
 video::-webkit-media-controls {
     display: none;
@@ -62,7 +51,7 @@ video::-webkit-media-controls {
 
 
 <h1 id="time"></h1>
-<h1 id="bat"></h1>
+
 
 
 <video autoplay muted playsinline id="video"></video>
@@ -93,11 +82,7 @@ document.getElementById("time").textContent = `${h}:${m}`
 },1000)
 
 
-setInterval(()=>{
-    navigator.getBattery().then(function(battery) {
-      document.getElementById("bat").textContent = battery.level * 100 + "%";
-    });
-},1000)
+
 
 
 
