--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body {
     z-index: 2;
     background-color: rgb(192, 192, 192);
     border-radius: 20px;
+    display:none;
 }
 
 
@@ -55,7 +56,7 @@ video::-webkit-media-controls {
     top: 30%;
     width: 260px;
     height: 170px;
-    display: none;
+    
 }
 
 </style>
@@ -68,7 +69,7 @@ video::-webkit-media-controls {
 <video autoplay muted playsinline id="video"></video>
 <video autoplay muted playsinline id="video2"></video>
 
-<iframe id="cide" src="https://www.youtube.com/embed/uJJsbBYInzU?si=hHgEtbpUDCdQyoBi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe id="cide" src="https://youtu.be/pZgQ1PzKuXA?si=Kx-PzKeacwWJPnC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <script>
 var video = document.querySelector("#video");
 var video2 = document.querySelector("#video2");
